fix(components): Fix button label and icon alignment when inside a modal (#1789)
Make global selector more specific so it only touches the buttons not their children

--- a/packages/components/src/Modal/Modal.css
+++ b/packages/components/src/Modal/Modal.css
@@ -131,10 +131,10 @@
   margin-left: var(--space-small);
 }
 
-.rightAction *:first-child {
+.rightAction > *:first-child {
   order: 2; /* 1 */
 }
 
-.rightAction *:nth-child(2) {
+.rightAction > *:nth-child(2) {
   order: 1; /* 1 */
 }
